--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <nav aria-current="page">
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="register.html">Register</a></li>
+                    <li><a href="./Register.html">Register</a></li>
                 </ul>
             </nav>
         </header>
