made some fixes

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <a href="./Register.html"></a>
     <title>Document</title>
 </head>
 <body>
@@ -25,7 +26,7 @@
                 <p><span>Biography:</span>
                     <span>My name is Gabriel Agada, 
                     I am passionate about all things computer and technology. I love to build things and solve problems. 
-                    I love watching and playing Football. I am currently working a Lead for Starknet Northern Nigeria.
+                    I love watching and playing Football. I am currently working as a Lead for Starknet Northern Nigeria.
                     I am currently learning Software Development at Altschool Africa.
     
                 </span></p>
