--- a/Register.html
+++ b/Register.html
@@ -73,7 +73,7 @@
                         <option value="Angola">Angola</option>
                         <option value="Ghana">Ghana</option>
                         <option value="namibia">Namibia</option>
-                        <option value="usa">Unites State</option>
+                        <option value="usa">United State</option>
                     </select>
         </p>
                
